--- a/src/pages/inbox.f7.html
+++ b/src/pages/inbox.f7.html
@@ -26,7 +26,7 @@
     <div class="page-content messages-content">
       <div class="messages">
         <!-- Full layout sent message -->
-        <div class="message message-sent">
+        <!-- <div class="message message-sent">
           <div class="message-avatar" style="opacity:1"><i class="icon f7-icons">person_alt_circle</i></div>
           <div class="message-content">
             <div class="message-name">John Doe</div>
@@ -36,9 +36,9 @@
               <div class="message-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</div>
             </div>
           </div>
-        </div>
+        </div> -->
         <!-- Full layout received message -->
-        <div class="message message-received">
+        <!-- <div class="message message-received">
           <div class="message-avatar" style="background-image:url(static/icons/icon.png);opacity:1;background-color: #ddd"></div>
           <div class="message-content">
             <div class="message-name">John Doe</div>
@@ -48,7 +48,7 @@
               <div class="message-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</div>
             </div>
           </div>
-        </div>
+        </div> -->
       </div>      
     </div>
   </div>
@@ -88,6 +88,14 @@
   
         // update count label cart 
         this.updateCountLabelCart();
+
+        app.localforage.getItem('users').then(value => {
+          if ( value ) {
+            pageContent.html(`<div class="text-align-center" style="margin-top: 30vh">Belum ada Pesan</div>`)
+          } else {
+            pageContent.html(`<div class="text-align-center" style="margin-top: 30vh">Maaf anda belum login</div>`)
+          }
+        }).catch(err => console.log(err))
   
         // get content join reseller
        /*  let findHashtags = this.findHashtags;
